populando index.html

--- a/html/quizz.html
+++ b/html/quizz.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/quizz.css" />
     <script src="../js-scripts/quizz.js" defer></script>
-    <title>Perguntinhas</title>
+    <title>Pequeno Ajudante</title>
   </head>
   <body>
     <div class="all">
