--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pequeno Ajudante</title>
     <link rel="stylesheet" href="css/index.css" />
+    <script src="js-scripts/index.js" defer></script>
   </head>
   <body>
     <div class="navbar">
@@ -14,5 +15,55 @@
       <a href="html/calculator.html">Calculadora</a>
       <a href="html/quizz.html">Quizz</a>
     </div>
+    <div class="container">
+      <div class="perfil">
+        <img src="img/eu.jpg" alt="Foto do Gabriel" />
+        <p>Oi, pessoal. Me chamo Gabriel. Seja bem vindx =).</p>
+        <button type="button" class="infoBtn">Mais informações</button>
+        <div class="infoDiv">
+          <p>
+            Me chamo Gabriel, sou programador em desenvolvimento. Estou sempre à
+            procura de novos desafios, isso significa que sempre que posso, eu
+            estudo. Sempre procuro evoluir cada vez mais. Aqui eu crio e
+            experimento. O importante é caminhar e melhorar.
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <p>Contatos:</p>
+      <p>
+        <a
+          href="https://www.linkedin.com/in/gabriel-tenorio-48896a161/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >LinkedIn</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://github.com/gtCessi"
+          target="_blank"
+          rel="noopener noreferrer"
+          >GitHub</a
+        >
+      </p>
+      <p>
+        <a
+          href="mailto:gabrielt360@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Email</a
+        >
+      </p>
+      <p>
+        <a
+          href="https://www.instagram.com/gtCessi/"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Instagram</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
