nova funcionalidade: dados de rpg

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pequeno Ajudante</title>
     <link rel="stylesheet" href="/css/calculator.css" />
+    <link rel="icon" href="../img/icon.png" type="image/x-icon" />
     <script src="/js-scripts/calculator.js" defer></script>
+    <title>Pequeno Ajudante</title>
   </head>
   <body>
     <div class="navbar">
@@ -14,6 +15,7 @@
       <a href="./task.html">Tarefas</a>
       <a href="./calculator.html ">Calculadora</a>
       <a href="./quizz.html">Quizz</a>
+      <a href="./dice.html">Dados</a>
     </div>
 
     <div>
