--- a/html/task.html
+++ b/html/task.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pequeno Ajudante</title>
+    <link rel="icon" href="../img/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/task.css" />
   </head>
   <body>
@@ -13,6 +14,7 @@
       <a href="./task.html">Tarefas</a>
       <a href="./calculator.html">Calculadora</a>
       <a href="./quizz.html">Quizz</a>
+      <a href="./dice.html">Dados</a>
     </div>
 
     <div id="div1" class="header">
