--- a/html/quizz.html
+++ b/html/quizz.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/quizz.css" />
+    <link rel="icon" href="../img/icon.png" type="image/x-icon" />
     <script src="../js-scripts/quizz.js" defer></script>
     <title>Pequeno Ajudante</title>
   </head>
@@ -15,6 +16,7 @@
         <a href="./task.html">Tarefas</a>
         <a href="./calculator.html">Calculadora</a>
         <a href="./quizz.html">Quizz</a>
+        <a href="./dice.html">Dados</a>
       </div>
 
       <div class="container">
